Clean up UI on frontend on the pairing page Clean up code to be slightly more readable Add CSS file Fix CSS file not being found when page is loaded

--- a/assets/main.css
+++ b/assets/main.css
@@ -1,40 +1,33 @@
 body {
-    background-color: #111216;
+    background-color: whitesmoke;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
-#main {
+main {
+    text-align: center;
+}
+
+button {
+    border: none;
+    border-radius: 50vh;
+    padding: 5px 15px 5px 15px;
+}
+
+input[type=number]::-webkit-outer-spin-button,
+input[type=number]::-webkit-inner-spin-button {
+    -webkit-appearance: none;
     margin: 0;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif
 }
 
-#links {
-    width: 400px;
-    text-align: left;
-    font-size: x-large;
-    color: white;
-    display: flex;
-    flex-direction: column;
+input[type=number] {
+    max-width: 25px;
+    -moz-appearance: textfield;
+    appearance: textfield;
 }
 
-#links a {
-    color: white;
-    text-decoration: none;
-    margin-top: 20px;
-    margin: 10px;
-    border: white 1px solid;
-    border-radius: 5px;
-    padding: 10px;
+.confirm {
+    background-color: lightgreen;
 }
-
-#links a:hover {
-    background-color: #1f1f1f;
-    cursor: pointer;
-}
-
-#header {
-    max-width: 1200px;
+h1, h2, h3, h4, h5, h6 {
+    margin: 0;
 }
